# music_uploader_server

./: .gitignore  Cargo.toml  Readme.md  Rocket.toml  Rocket.toml.example  Users.toml.example  build.sh  examples.txt  metrics.db  run.sh.example
examples/: test_plex_api.rs
plexSqliteExperiments/: findingPlaylistFiles.sh
src/: authenticated.rs  data_validation.rs  lib.rs  main.rs  model.rs  path_utils.rs  rocket_utils.rs  time_utils.rs  users.rs
src/activities/: declare_upload.rs  finalize_part_upload.rs  mod.rs  public_playlists.rs  search.rs  simple_routes.rs  trigger_scan.rs  upload.rs  upload_part.rs
src/activities/multipart_upload/: declare_upload.rs  finalize_part_upload.rs  mod.rs  upload_part.rs
src/clients/: mod.rs  plex_client.rs  plex_model.rs
src/config/: mod.rs  secrets_config.rs  server_config.rs
src/data/: metrics.rs  mod.rs  operational_data.rs  plex_db.rs
src/services/: mod.rs  sync_public_playlists.rs
