[package]
name = "music_uploader_server"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.1"
thiserror = "2"
rocket-basicauth = "3"
toml = "0.8"
sha256 = "1.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12" }
lazy_static = "1.5"
rusqlite = { version = "0.34.0", features = ["bundled", "time"] }
time = "0.3.41"
